# weather-crypto-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/dash_cli/: crypto.py  main.py  weather.py
tests/: test_crypto.py  test_weather.py
