[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-cli"
version = "0.1.0"
authors = [
    { name = "Abdullah Imran" },
]
description = "A CLI tool for dash-cli"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "requests",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pre-commit",
]

[project.scripts]
dash-cli = "dash_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88